--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "@fastify/cors": "^11.1.0",
-    "@fastify/http-proxy": "^11.3.0",
-    "fastify": "^5.5.0"
+    "@fastify/cors": "11.2.0",
+    "@fastify/http-proxy": "11.4.1",
+    "fastify": "5.7.4"
   }
 }
